RESOLVED FIXED102728
[BlackBerry] Block Zoom picks wrong block
https://bugs.webkit.org/show_bug.cgi?id=102728
Summary [BlackBerry] Block Zoom picks wrong block
gmak
Reported 2012-11-19 15:51:28 PST
Transform Error
Attachments
Patch (910 bytes, patch)
2012-11-19 15:57 PST, gmak
gmak: review-
Patch with changelog (2.37 KB, patch)
2012-11-19 16:03 PST, gmak
no flags
gmak
Comment 1 2012-11-19 15:57:25 PST
gmak
Comment 2 2012-11-19 15:58:56 PST
Comment on attachment 175065 [details] Patch No changelog .. having trouble with the tools
gmak
Comment 3 2012-11-19 16:03:07 PST
Created attachment 175070 [details] Patch with changelog
Rob Buis
Comment 4 2012-11-19 18:22:33 PST
Comment on attachment 175070 [details] Patch with changelog Ok.
WebKit Review Bot
Comment 5 2012-11-19 19:01:18 PST
Comment on attachment 175070 [details] Patch with changelog Clearing flags on attachment: 175070 Committed r135233: <http://trac.webkit.org/changeset/135233>
WebKit Review Bot
Comment 6 2012-11-19 19:01:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.