[BlackBerry] Block Zoom picks wrong block https://bugs.webkit.org/show_bug.cgi?id=102728

Patch by Genevieve Mak <gmak@rim.com> on 2012-11-19
Reviewed by Rob Buis.

Reviewed Internally by Jakob Petsovits
Remove transform missed in previous commit for
https://bugs.webkit.org/show_bug.cgi?id=101608
PR #247198

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::nodeForZoomUnderPoint):

Canonical link: https://commits.webkit.org/120902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135233 268f45cc-cd09-0410-ab3c-d52691b4dbfc